Bug #9839  Column with AUTOINC contains -1 Value on node stop